cabal-version:       2.2

name:                starlight
version:             0.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/robrix/starlight#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           Rob Rix
-- category:            Web
build-type:          Simple
extra-source-files:  README.md

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import:              common
  hs-source-dirs:      src
  exposed-modules:
    Control.Carrier.Finally
    Control.Carrier.State.IORef
    Control.Carrier.Time
    Control.Concurrent.Lift
    Control.Effect.Finally
    Control.Effect.Time
    Control.Exception.Lift
    Control.Monad.IO.Class.Lift
    Data.Interval
    Foreign.C.String.Lift
    Foreign.Marshal.Alloc.Lift
    Foreign.Marshal.Array.Lift
    Foreign.Marshal.Utils.Lift
    Geometry.Circle
    Geometry.Rect
    Geometry.Triangle
    GL.Array
    GL.Buffer
    GL.Carrier.Program
    GL.Carrier.Program.Live
    GL.Effect.Program
    GL.Enum
    GL.Error
    GL.Framebuffer
    GL.Object
    GL.Program
    GL.Scalar
    GL.Shader
    GL.Shader.DSL
    GL.Texture
    GL.TextureUnit
    GL.Uniform
    Linear.Exts
    Physics.Delta
    S
    Starlight.Body
    Starlight.Input
    Starlight.Shader.Radar
    Starlight.Shader.Ship
    Starlight.Shader.Stars
    UI.Carrier.Window
    UI.Colour
    UI.Effect.Window
    UI.Font
    UI.Glyph
    UI.Graph
    UI.Graph.Lines
    UI.Graph.Points
    UI.Label
    UI.Label.Glyph
    UI.Label.Text
    UI.Path
    UI.Window
    Unit.Angle
    Unit.Length
    Unit.Mass
    Unit.Time
  build-depends:
      base
    , containers
    , directory ^>= 1.3
    , fused-effects      ^>= 1
    , fused-effects-lens ^>= 1.1
    , gl
    , linear
    , microlens
    , opentype
    , prettyprinter
    , sdl2
    , text
    , time ^>= 1.9
    , transformers ^>= 0.5
    , vector ^>= 0.12

executable starlight
  import:              common
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , containers
    , filepath ^>= 1.4
    , fused-effects
    , fused-effects-lens
    , gl
    , linear
    , microlens
    , sdl2
    , starlight
    , time

source-repository head
  type:     git
  location: https://github.com/robrix/starlight
