cabal-version:       2.2

name:                starlight
version:             0.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/robrix/starlight#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           Rob Rix
-- category:            Web
build-type:          Simple
extra-source-files:  README.md

common common
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-name-shadowing
    -Wno-safe
    -Wno-unsafe
  if (impl(ghc >= 8.6))
    ghc-options: -Wno-star-is-type
  if (impl(ghc >= 8.8))
    ghc-options: -Wno-missing-deriving-strategies

library
  import:              common
  hs-source-dirs:      src
  exposed-modules:
    Control.Carrier.Finally
    Control.Carrier.Profile.Identity
    Control.Carrier.Profile.Time
    Control.Carrier.Reader.Relation
    Control.Carrier.State.IORef
    Control.Carrier.State.ST.Strict
    Control.Carrier.Thread.IO
    Control.Carrier.Trace.Lift
    Control.Concurrent.Lift
    Control.Effect.Finally
    Control.Effect.Lens.Exts
    Control.Effect.Profile
    Control.Effect.Thread
    Control.Exception.Lift
    Control.Monad.IO.Class.Lift
    Data.Functor.Interval
    Foreign.C.String.Lift
    Foreign.Marshal.Alloc.Lift
    Foreign.Marshal.Array.Lift
    Foreign.Marshal.Utils.Lift
    Geometry.Circle
    Geometry.Triangle
    GL
    GL.Array
    GL.Buffer
    GL.Carrier.Bind
    GL.Carrier.Check.Identity
    GL.Carrier.Check.IO
    GL.Effect.Bind
    GL.Effect.Check
    GL.Enum
    GL.Error
    GL.Framebuffer
    GL.Object
    GL.Program
    GL.Shader
    GL.Shader.DSL
    GL.Texture
    GL.TextureUnit
    GL.Type
    GL.Viewport
    GL.Uniform
    Linear.Exts
    Starlight.Actor
    Starlight.AI
    Starlight.Body
    Starlight.Character
    Starlight.CLI
    Starlight.Controls
    Starlight.Draw
    Starlight.Draw.Body
    Starlight.Draw.Radar
    Starlight.Draw.Ship
    Starlight.Draw.Starfield
    Starlight.Draw.Weapon.Laser
    Starlight.Ephemeris
    Starlight.Game
    Starlight.Identifier
    Starlight.Input
    Starlight.Main
    Starlight.Neighbourhood
    Starlight.Physics
    Starlight.Ship
    Starlight.Sol
    Starlight.System
    Starlight.View
    Starlight.Weapon.Laser
    UI.Colour
    UI.Drawable
    UI.Glyph
    UI.Graph
    UI.Graph.Lines
    UI.Graph.Points
    UI.Graph.Vertex
    UI.Label
    UI.Label.Glyph
    UI.Label.Text
    UI.Path
    UI.Typeface
    UI.Window
    Unit
    Unit.Angle
    Unit.Length
    Unit.Mass
    Unit.Time
  other-modules:
    Paths_starlight
  build-depends:
      base
    , containers
    , directory ^>= 1.3
    , filepath ^>= 1.4
    , fused-effects      ^>= 1
    , fused-effects-lens ^>= 1.2
    , generic-lens
    , gl
    , lens
    , linear
    , opentype
    , optparse-applicative
    , prettyprinter
    , prettyprinter-ansi-terminal
    , sdl2 ^>= 2.5
    , text
    , time ^>= 1.9
    , transformers ^>= 0.5
    , unordered-containers
    , vector ^>= 0.12

executable starlight
  import:              common
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , starlight

source-repository head
  type:     git
  location: https://github.com/robrix/starlight
