name:                text-gl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/robrix/text-gl#readme
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           Rob Rix
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Geometry.Rect
                     , GL.Array
                     , GL.Buffer
                     , GL.Error
                     , GL.Framebuffer
                     , GL.Object
                     , GL.Program
                     , GL.Scalar
                     , GL.Shader
                     , GL.Texture
                     , GL.TextureUnit
                     , GL.Uniform
                     , UI.Font
                     , UI.Glyph
                     , UI.Path
  build-depends:       base
                     , containers
                     , gl
                     , linear
                     , microlens
                     , opentype
                     , sdl2
                     , text
                     , vector
  default-language:    Haskell2010

executable text-gl
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , gl
                     , linear
                     , microlens
                     , opentype
                     , sdl2
                     , semigroupoids
                     , text
                     , text-gl
                     , vector
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/robrix/text-gl
